Update VOCUS 2022-03-31 patch

--- a/_posts/2022-03-30-VOCUS-澳門系列-澳門經濟再度陷入負增長.html
+++ b/_posts/2022-03-30-VOCUS-澳門系列-澳門經濟再度陷入負增長.html
@@ -8,31 +8,26 @@ tags: blog
 author: REDBRIC
 ---
 
-<div class="draft-block draft--p left"></div>
-<div class="embed-block-prerender" data-url="https://youtu.be/EQB3hSC3XoM"></div>
-<div class="draft-block draft--p left"></div>
+<iframe class="embed-block-prerender" src="https://youtu.be/EQB3hSC3XoM"></iframe>
 <div class="draft-block draft--p left">兩年前爆發世紀疫症，全球一度陷入經濟衰退，但隨著各國合力大幅減息，世界經濟急速反彈，加上疫苗開始發揮效用，全球經濟正在逐步回升，英美在2021年第四季的GDP年度增長達到6.5%和5.6%，新加坡和香港也有6.1%和4.8%，澳紐亦有4.2%及3.1%；各國央行甚至已開始加息以冷卻經濟並抑制高通脹，美聯儲在今年三月首度加息及宣佈在2022年將會有多次加息行動，美國孳息率再次接近倒掛，上次倒掛已準確預測全球經濟衰退(姚，2019)，今次自然導致市場轉頭憂慮經濟再度衰退 。</div>
 <h3 class="draft-block draft--h3" name="header-aso01">澳門經濟負增長</h3>
 <div class="draft-block draft--p left">由於香港採用聯繫匯率制度，香港金管局緊隨美國加息，澳門元基本與港元掛勾，澳門金管局亦即時跟隨加息0.25厘，但近期澳門的經濟情況並不太理想，雖然疫情對澳門的影響相對輕微，然而由於全球疫情仍然嚴重，近期鄰近地區出現大規模社區傳播，澳門繼續採取嚴厲防疫措施，導致遊客人數持續遠低於疫前水平，由於澳門經濟高度集中在博彩業，遊客減少對經濟的打擊最為嚴重。</div>
 <div class="draft-block draft--p left">圖1顯示早在2019年澳門的經濟已經陷入衰退，但情況尚屬輕微，跌幅只有-1.6%至-4.7%，但踏入2020年爆發疫情，四季GDP的年度跌幅深達-42.6%至-66.3%，反映疫情導致澳門損失超過一半的經濟產值！與世界相似，在2021年初經濟有強力反彈，而澳門在2021年第二季的GDP年度增長率更衝上70.9%，第三季亦有33.8%，反彈力度非常強勁；但第四季突然馬失前蹄，跌落-4.4%，再度由正轉負，成為近期亞太區少數經濟負增長的地區，當中最主要的成因來自博彩服務產值下跌-14.4% <a href="https://tradingeconomics.com/macau/gdp-growth-annual" target="_blank" class="draft--a">(Trading Economics, 2022)</a>。澳門會否再度陷入經濟衰退，還需看2022年第一季的數據。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1185px" class="image-block-prerender" data-src="https://images.vocus.cc/d8cba033-3b92-487f-936a-93cbd6b29ff9.png" data-width="1185" data-height="717" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖1 澳門GDP年度增長率。資料：Trading Economics</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/d8cba033-3b92-487f-936a-93cbd6b29ff9.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖1 澳門GDP年度增長率。資料：Trading Economics</figcaption></div>
 <h3 class="draft-block draft--h3" name="header-fvvvd">遊客大幅減少</h3>
 <div class="draft-block draft--p left">圖2為過去五年澳門的每月遊客人數，疫前平均每月約有300萬人次，但疫後一度跌至接近零！至今年2月亦只有65萬5千多人，即約疫前的五份一。本來博彩服務亦可改為網上進行，但受到近期一些打擊網上賭博的報導，服務產值出現下跌。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1144px" class="image-block-prerender" data-src="https://images.vocus.cc/b1d63fe9-572d-47f4-8cae-4d5a17bbadd3.png" data-width="1144" data-height="737" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖2 澳門遊客人數。資料：Trading Economics</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/b1d63fe9-572d-47f4-8cae-4d5a17bbadd3.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖2 澳門遊客人數。資料：Trading Economics</figcaption></div>
 <h3 class="draft-block draft--h3" name="header-c6gcl">零售總值回升</h3>
 <div class="draft-block draft--p left">事實上，澳門的零售總值增幅最符合不少專家預測的「報復式消費」，反彈力度高達兩倍多。圖3顯示澳門在2020年全年的零售總值年度變化均陷入深度下跌，其中第二季的跌幅達到-61.6%，但踏入2021年，零售總值出現報復反彈，最高增幅達到218.96%！力度之強，實屬罕見，但2021年第四季的零售總值增幅急跌至只剩4.6%，2022年第一季會否再度陷入負增長，則仍需待五月才有數據公佈。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1147px" class="image-block-prerender" data-src="https://images.vocus.cc/921815da-989d-47fb-b869-930a80d43def.png" data-width="1147" data-height="740" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖3 澳門零售總值年度變化率。資料：Trading Economics</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/921815da-989d-47fb-b869-930a80d43def.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖3 澳門零售總值年度變化率。資料：Trading Economics</figcaption></div>
 <h3 class="draft-block draft--h3" name="header-8od9g">澳門通脹相對溫和</h3>
 <div class="draft-block draft--p left">隨著經濟由升轉跌，零售總值增速由快轉慢，通脹率自然不會太高，事實上，2020年底至2021年中曾出現輕微通縮，最近(2022年2月)的通脹率亦不過0.81%，物價年度升幅連百份一都不到，實在令不少歐美國家政府羨慕不已。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1130px" class="image-block-prerender" data-src="https://images.vocus.cc/1efd7bc1-3c76-48e0-a12c-44fea2d8912a.png" data-width="1130" data-height="710" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖4 澳門通脹率。資料：Trading Economics</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/1efd7bc1-3c76-48e0-a12c-44fea2d8912a.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖4 澳門通脹率。資料：Trading Economics</figcaption></div>
 <div class="draft-block draft--p left">然而，在如此極低的通脹和經濟陷入萎縮的情況下，澳門金管局卻要跟隨香港跟隨美國加息，進一步打擊經濟復甦的勢頭，貨幣供應出現下降，圖5顯示2021年下半年起澳門的M2貨幣供應出現回落，一改M2長期基本持續增長的趨勢。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1182px" class="image-block-prerender" data-src="https://images.vocus.cc/eab665cd-aebd-45a9-a15c-e749c1534c69.png" data-width="1182" data-height="746" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖5 澳門M2貨幣供應。資料：Trading Economics</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/eab665cd-aebd-45a9-a15c-e749c1534c69.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖5 澳門M2貨幣供應。資料：Trading Economics</figcaption></div>
 <h3 class="draft-block draft--h3" name="header-4vok6">港澳匯率掛勾，經濟增長同步</h3>
 <div class="draft-block draft--p left">早在世紀疫症出現前，亦早於香港在2019年下半年出現的社會事件，澳門的GDP年度變化在2019年初已率先下跌，香港的GDP年度變化隨後在2019年第三季亦開始下跌，反映兩地的經濟活力高度同源 (比較圖1與圖6)，令澳門和香港成為全球在疫爆中最先經濟衰退的地區之二。</div>
 <div class="draft-block draft--p left">及後香港跟隨美國減息，香港的GDP增長率在2021年急速反彈，一度上升8%，後至2021年第四季增長率已回落至4.8%，由於香港在2022年第一季爆發第五波大規模疫症擴散，相信該季的GDP增長難以大幅上升，會否再次與澳門一同步入經濟產值下跌則需留待五月公佈的數據。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1173px" class="image-block-prerender" data-src="https://images.vocus.cc/79f8ed31-2dd1-43bf-bfb1-20e588392f7a.png" data-width="1173" data-height="664" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖6 香港GDP年度增長率。資料：Trading Economics</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/79f8ed31-2dd1-43bf-bfb1-20e588392f7a.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖6 香港GDP年度增長率。資料：Trading Economics</figcaption></div>
 <div class="draft-block draft--p left">參考</div>
 <div class="draft-block draft--p left">姚松炎 (2019) 收益率曲線倒掛何以預測經濟衰退？你可能是貢獻者之一！方格子，8月20日。 <a href="https://vocus.cc/hk_real_estate_econ/5d5b50dafd89780001e4a78c" target="_blank" class="draft--a">https://vocus.cc/hk_real_estate_econ/5d5b50dafd89780001e4a78c</a></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
