--- a/_posts/2022-03-30-INMEDIA-昔日500元贈行乞老婦-今被問賠償無家者-林鄭不回應.html
+++ b/_posts/2022-03-30-INMEDIA-昔日500元贈行乞老婦-今被問賠償無家者-林鄭不回應.html
@@ -9,7 +9,7 @@ author: 獨媒報導
 ---
 
 <img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/0207111%20%281%29_2.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><em>圖片來源：眾新聞</em></p>
-<p><font color="red">（獨媒報導）</font>一批在深水埗通州街露宿的無家者，2019年冬至期間遭康文署和防暴警清場，家當被當垃圾丟棄。14名無家者入稟小額錢債審裁處控告康文署，昨日<a href="https://www.inmediahk.net/node/政經/無家者財物被當垃圾丟棄-小額庭判康文署敗訴-象徵式賠100元">獲判勝訴</a>，但僅獲一百元象徵性賠償。特首林鄭月娥今早在疫情記者會上，被問會否向無家者道歉和提供額外賠償，林鄭沒有回應，稱執行工作由康文署負責，應由署方回答。</p>
+<p><font color="#e4692b">【獨媒報導】</font>一批在深水埗通州街露宿的無家者，2019年冬至期間遭康文署和防暴警清場，家當被當垃圾丟棄。14名無家者入稟小額錢債審裁處控告康文署，昨日<a href="https://www.inmediahk.net/node/政經/無家者財物被當垃圾丟棄-小額庭判康文署敗訴-象徵式賠100元">獲判勝訴</a>，但僅獲一百元象徵性賠償。特首林鄭月娥今早在疫情記者會上，被問會否向無家者道歉和提供額外賠償，林鄭沒有回應，稱執行工作由康文署負責，應由署方回答。</p>
 <p>無家者家當被丟的官司，小額錢債審裁處昨天裁定康文署沒有履行「非自願托管者」看管物品的責任，裁定康文署敗訴。然而，14名無家者向政府索償$2,000至$13,000元金額，法庭認為他們無法證明家當的金額，只判「象徵式賠償」100元。事件在社會引起廣泛關注，協助無家者入稟的社區組織協會<a href="https://www.inmediahk.net/node/政經/社工吳衛東批評政府侵權-「無家者唔應該隨便受欺凌」">批評政府欺凌無家者</a>。</p>
 <p>今日在疫情記者會上，有記者問特首林鄭會否向涉事無家者，特別是兩位未待結果已經不幸去世的無家者道歉，又問政府或林鄭會否向無家者提供額外補償。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/Hv0V3f" title="1210965"><img src="https://live.staticflickr.com/65535/51970378941_f03fe897f0_z.jpg" width="640" alt="1210965" /></a></p>
