Update VOCUS 2022-04-01 patch

--- a/_posts/2022-03-30-VOCUS-澳門系列-澳門經濟再度陷入負增長.html
+++ b/_posts/2022-03-30-VOCUS-澳門系列-澳門經濟再度陷入負增長.html
@@ -8,7 +8,7 @@ tags: blog
 author: REDBRIC
 ---
 
-<iframe class="embed-block-prerender" src="https://youtu.be/EQB3hSC3XoM"></iframe>
+<iframe class="embedly-embed" src="https://www.youtube.com/embed/EQB3hSC3XoM" scrolling="no" allow="autoplay; fullscreen" allowfullscreen="true" width="740" height="417" frameborder="0"></iframe>
 <div class="draft-block draft--p left">兩年前爆發世紀疫症，全球一度陷入經濟衰退，但隨著各國合力大幅減息，世界經濟急速反彈，加上疫苗開始發揮效用，全球經濟正在逐步回升，英美在2021年第四季的GDP年度增長達到6.5%和5.6%，新加坡和香港也有6.1%和4.8%，澳紐亦有4.2%及3.1%；各國央行甚至已開始加息以冷卻經濟並抑制高通脹，美聯儲在今年三月首度加息及宣佈在2022年將會有多次加息行動，美國孳息率再次接近倒掛，上次倒掛已準確預測全球經濟衰退(姚，2019)，今次自然導致市場轉頭憂慮經濟再度衰退 。</div>
 <h3 class="draft-block draft--h3" name="header-aso01">澳門經濟負增長</h3>
 <div class="draft-block draft--p left">由於香港採用聯繫匯率制度，香港金管局緊隨美國加息，澳門元基本與港元掛勾，澳門金管局亦即時跟隨加息0.25厘，但近期澳門的經濟情況並不太理想，雖然疫情對澳門的影響相對輕微，然而由於全球疫情仍然嚴重，近期鄰近地區出現大規模社區傳播，澳門繼續採取嚴厲防疫措施，導致遊客人數持續遠低於疫前水平，由於澳門經濟高度集中在博彩業，遊客減少對經濟的打擊最為嚴重。</div>
