--- a/_posts/2022-03-31-VOCUS-何謂創新-個人的認知與心理層面對創新點子的影響.html
+++ b/_posts/2022-03-31-VOCUS-何謂創新-個人的認知與心理層面對創新點子的影響.html
@@ -9,10 +9,9 @@ author: 共創者 葉紹平(平哥)
 ---
 
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">文章撰稿人是Social AED桃園分會幹部</span></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:400px" class="image-block-prerender" data-src="https://images.vocus.cc/95ec8a7d-2127-4693-a30b-fd3a2ae540e1.jpg" data-width="1477" data-height="1108" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">創新設計的新血。圖片來源:《設計思考改造世界》</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/95ec8a7d-2127-4693-a30b-fd3a2ae540e1.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">創新設計的新血。圖片來源:《設計思考改造世界》</figcaption></div>
 <h3 class="draft-block draft--h3"><span style="font-weight: bold; ">👉在看本篇文章前可以先看以下文章</span></h3>
-<div class="draft-block draft--p left"></div>
-<div class="embed-block-prerender" data-vocus="true" data-url="https://vocus.cc/@oliver831yah/60d55f89fd8978000109958b" data-title="吼，我該如何創新呢? | 共創者 葉紹平(平哥) - vocus" data-description="創新這個詞彙在我國中時是我第一次接觸到，當時給我的感覺是創新這個詞彙看起來很酷；且好像也蠻符合我們未來所需要具備的能力，但要如何做創新呢?一直是我很疑惑的事情，過程中常聽到很多理論，但卻不知道該如何實踐，這讓我感到有點挫折。直到我開始接觸設計思考這個方法時，我才慢慢意識到，這或許可以成為大家都可以使用的創新設計流程。我認為它所要傳達的概念是透過這套流程我們有可能可以快速的在生活當中找出低成本..." data-providername="Vocus" data-backgroundimageurl="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&url=https%3A%2F%2Fd2a6d2ofes041u.cloudfront.net%2Fresize%3Fnorotation%3Dtrue%26url%3Dhttps%253A%252F%252Fimages.vocus.cc%252F8e7fa303-f79e-457f-9bf1-7233c5db7903.jpg%26width%3D1200%26sign%3DihBmG5XlQydfxystCbxx6C8OBYqxb-rsLNgUgGCcoKw&width=550&sign=BVv8erxjiF2j-VtWMqF4Mfy_phnJj295j6moaobHzlo"></div>
+<div class="draft-block draft--p left"><a href="https://vocus.cc/@oliver831yah/60d55f89fd8978000109958b">吼，我該如何創新呢? | 共創者 葉紹平(平哥) - vocus</a><img src="https://images.vocus.cc/8e7fa303-f79e-457f-9bf1-7233c5db7903.jpg"><figcaption>創新這個詞彙在我國中時是我第一次接觸到，當時給我的感覺是創新這個詞彙看起來很酷；且好像也蠻符合我們未來所需要具備的能力，但要如何做創新呢?一直是我很疑惑的事情，過程中常聽到很多理論，但卻不知道該如何實踐，這讓我感到有點挫折。直到我開始接觸設計思考這個方法時，我才慢慢意識到，這或許可以成為大家都可以使用的創新設計流程。我認為它所要傳達的概念是透過這套流程我們有可能可以快速的在生活當中找出低成本...</figcaption></div>
 <h3 class="draft-block draft--h3">一、前言</h3>
 <div class="draft-block draft--p left">我曾經寫過<a href="https://vocus.cc/article/60d55f89fd8978000109958b" target="_blank" class="draft--a">《吼，我該如何創新呢?》</a>這一篇文章，但經過不斷的參與一些跟創新有關的工作坊；以及自己把這些流程拿來實際運用後讓我開始反思一些事情是<br>1.何謂創新呢?<br>2.在執行創新點子的過程中確實會遇到一些困難，這些困難是什麼呢?以及要如何克服這些困難呢?<br>因此我就想要試圖利用這一篇文章來試著回答這兩個問題，但本篇文章是從個人的認知與心理層面來去分析在創新點子的出現與實踐中會遇到那些困難。</div>
 <h3 class="draft-block draft--h3"><span style="font-weight: bold; ">二、何謂創新?</span></h3>
@@ -33,7 +32,7 @@ author: 共創者 葉紹平(平哥)
 <h3 class="draft-block draft--h3">七、活動宣傳</h3>
 <div class="draft-block draft--p left">這是由Social AED的有好夥伴《康林生活》所舉辦的創新思維工作坊，這場工作坊將利用設計思考帶領你學習如何實踐創新的點子，並且可以幫助你跳脫出自己的框架找尋到突破現況的可能性，歡迎大家來參與。</div>
 <div class="draft-block draft--p left"><a href="https://www.accupass.com/event/2202090324322036511254" target="_blank" class="draft--a"><span style="text-decoration: underline; ">創新思維工作坊｜自我升級！培養突破現況的隱藏版優勢</span></a></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:400px" class="image-block-prerender" data-src="https://images.vocus.cc/8af7f8e4-e073-4967-9192-8f846be14b6f.gif" data-width="106" data-height="123" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/8af7f8e4-e073-4967-9192-8f846be14b6f.gif"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">👉喜歡此篇文章的人可以幫我拍手五下(在頁面的最底下)or贊助我讓我可以有些微薄的收入。</div>
 <div class="draft-block draft--p left">👉拍手是不用花半毛錢的，只需登入gmail、FB......等社群軟體就可以幫助我有收入囉。</div>
 <div class="draft-block draft--p left">👉歡迎大家可以追蹤我，這樣子就可以在第一時間收到我熱騰騰的最新文章喔。</div>
