--- a/_posts/2022-03-31-PQ-關切中國破壞台海和平-孫曉雅談ait年度目標-聚焦台灣安全-供應鏈與國際參與.html
+++ b/_posts/2022-03-31-PQ-關切中國破壞台海和平-孫曉雅談ait年度目標-聚焦台灣安全-供應鏈與國際參與.html
@@ -76,7 +76,7 @@ author: 林志鴻
 
 
 
-<p>參考資料：<br>2022/03/30　總統府　<a href="https://www.president.gov.tw/NEWS/26646?fbclid=IwAR2Tq_cL5skRF1N3P07orLlnzWCjfn8CQtD4j3F2370rp9d8pzEKmjmDoa8" target="_blank" rel="noreferrer noopener">總統期盼與美國商會持續合作　增進臺美雙邊貿易及投資夥伴關係</a></p>
+<p>參考資料：<br>2022/03/30　總統府　<a href="https://www.president.gov.tw/NEWS/26646?fbclid=IwAR2Tq_cL5skRF1N3P07orLlnzWCjfn8CQtD4j3F2370rp9d8pzEKmjmDoa8" target="_blank" rel="noreferrer noopener">總統期盼與美國商會持續合作　增進臺美雙邊貿易及投資夥伴關係</a><br>2022/03/31　REUTERS　<a href="https://www.reuters.com/world/asia-pacific/us-says-chinas-pressure-taiwan-threat-all-democracies-2022-03-31/" target="_blank" rel="noreferrer noopener" title="https://www.reuters.com/world/asia-pacific/us-says-chinas-pressure-taiwan-threat-all-democracies-2022-03-31/">U.S. says China&#8217;s pressure on Taiwan a threat to all democracies</a></p>
 
 
 
