--- a/_posts/2022-03-31-INMEDIA-出詩集講-發夢-經歷-專訪年青詩人李顥謙-寫得再迂迴曲折-香港人也會明白.html
+++ b/_posts/2022-03-31-INMEDIA-出詩集講-發夢-經歷-專訪年青詩人李顥謙-寫得再迂迴曲折-香港人也會明白.html
@@ -10,7 +10,7 @@ author: 獨媒報導
 
 <img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/0207111%20%281%29_7.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>歷史書、哲學書、政治書、社運人物自傳，逐一在圖書館架上悄然消失，連詩集也不例外。去年年尾，公共圖書館將詩集《戒和同修》、《光隱於塵》下架。康文署回覆時指，有關館藏涉嫌內容可能違反《港區國安法》或有關法律的規定，會以嚴肅態度處理，暫停有關館藏的服務。對於香港詩人來說，這是一次悄然無聲的警號，使人戒備又惶恐。</p>
 <p>時勢艱難，卻有人選擇逆流而上：曾主持《文學十三邀》、《今晚See詩先》的香港九十後詩人李顥謙，今年三月，出版第一本個人詩集《夢或者無明》。李直言，詩集大多作品均取材自他的「發夢」經歷，例如他曾夢見自己在一個陽光普照的下午，突然被制服人員包圍；又夢過自己與女友在台灣看展覽，突然被告知「再唔返香港，以後無得返」，他們馬上趕去機場，很是狼狽。李認為，夢境反映潛意識——至於他的各個噩夢，他形容：「受過社會輻射影響，反映真實恐懼。」</p>
-<p>近年來，香港紅線處處，出版或會觸犯煽動刊物罪。李承認，這些事件令他經常思考：「原來咁都有問題，咁我，係咪都有問題呢？」最終，為了能在香港出版，少許修茸是無可避免。但他相信：「只要你喺呢度生活，就算寫得再迂迴曲折，香港人都會明白。」</p>
+<p>近年來，香港紅線處處，出版或會觸犯煽動刊物罪。李承認，這些事件令他經常思考：「原來咁都有問題，咁我，係咪都有問題呢？」最終，為了能在香港出版，少許修葺是無可避免。但他相信：「只要你喺呢度生活，就算寫得再迂迴曲折，香港人都會明白。」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/photos/inmediahk/51944129047/in/album-72177720297437214/" title="DSC00004"><img src="https://live.staticflickr.com/65535/51944129047_cc9a15897d_z.jpg" width="640" alt="DSC00004" /></a></p>
 <p><strong>留在香港寫詩、推廣詩：不甘心，想做更多</strong></p>
 <p>香港社會急劇轉變，不少港人萌生移民念頭。今年27歲的李顥謙也不例外：「同人講就話係去（台灣）讀書，但其實都知走咗就唔會返轉頭。」他上網搜集過不少資料，甚至開始申請入學，但最終還是打消了這個念頭。</p>
@@ -35,7 +35,7 @@ author: 獨媒報導
 <p><strong>無法避免的審查：我的詩並不陽光明媚 </strong></p>
 <p>面對近年的低壓，李顥謙半帶無奈地說：「要妥協」。</p>
 <p>籌備詩集期間，不少涉及煽動刊物罪的起訴新聞令李憂慮，甚至自我審查起來：「原來咁都有問題，咁我，係咪都有問題呢？」期間，他多次質疑有沒有較保險的說法，可以真實地講自己感受，但又不會觸犯法例。當然，這是痛苦的過程，「唔係人哋，係自己拷問自己」。</p>
-<p>他承認，詩集最終要在香港出版，少許修茸調整是無可避免。但他認為，即使不能直接書寫恐懼的源頭，至少也能將情感分享；只要讀者在此生活，就算他寫得再迂迴曲折，香港人也會明白。</p>
+<p>他承認，詩集最終要在香港出版，少許修葺調整是無可避免。但他認為，即使不能直接書寫恐懼的源頭，至少也能將情感分享；只要讀者在此生活，就算他寫得再迂迴曲折，香港人也會明白。</p>
 <p>李顥謙也曾在寫作途中感到迷茫。他有時會質疑自己既不是受苦的人，只是旁觀，那他應該以甚麼人的視角書寫。721事件當晚，他在手機上看直播，眼巴巴望著無辜的人被打至頭破血流。住在元朗的他，卻感到自己沒有資格書寫這件事。他反問：「我怎樣寫？去寫他人痛苦嗎？」</p>
 <p>「體無完膚，腦盪如海／假如路仍未燒焦／擊落的血肉尚如午夜澄明／和平的痛楚／也應在所有人的睡夢裡，反覆攤分」他說，他唯一可以書寫的，是倖存者不安且內疚的心態。</p>
 <p>「我不知道怎麼講……（停頓5秒）呃……好愧疚，唔好過。好多人離開香港、見唔到屋企人，點解自己無事呢？」</p>
