--- a/_posts/2022-04-01-INMEDIA-已打三針38歲男兩周前染疫自殘-留院一周後嚴重肺炎肺栓塞-延至昨亡.html
+++ b/_posts/2022-04-01-INMEDIA-已打三針38歲男兩周前染疫自殘-留院一周後嚴重肺炎肺栓塞-延至昨亡.html
@@ -16,6 +16,7 @@ author: 獨媒報導
 <p>在下午的疫情記者會上，醫管局提到另外2名較年輕死者，詳情如下：</p>
 <blockquote><p>＊45歲男死者，患有末期癌症，並有擴散情況</p>
 <p>＊58歲男死者，患有多樣長期病患，需要洗腎</p></blockquote>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/wwJ3of" title="1211047"><img src="https://live.staticflickr.com/65535/51974172747_e1e638948a_b.jpg" alt="1211047" /></a></p>
 <p><strong>4宗法醫呈報個案 1宗為院舍個案</strong></p>
 <p>另有4宗由法醫呈報個案，死者的年齡介乎61至94歲，均患有長期病患，分別在3月7日、17日、18日和20日死亡，其中1人居住在院舍。衞生防護中心傳染病處主任張竹君指4人的死因均和新冠有關。</p>
 <p>醫管局表示由於數據滯後，在3月19日至3月30日期間 ，有20人染疫後死亡，為10男10女，年齡介乎59至102歲。</p>
