--- a/_posts/2022-04-01-INMEDIA-立法會逐條審議-暫緩追租-草案-罕有出現-反對派.html
+++ b/_posts/2022-04-01-INMEDIA-立法會逐條審議-暫緩追租-草案-罕有出現-反對派.html
@@ -12,7 +12,7 @@ author: 獨媒報導
 <p>龍漢標批評，原則上反對以立法干預受《基本法》保障的合約精神，他說即使接受這是非常時段，但政府立法原意是幫助中小企，不是為所有商業租戶。他批評現在草案涵蓋範圍太廣泛，連業務無受疫情打擊的大型商戶都受保護，遠超政府原意。他認為必須在條例交代「中小企」定義。</p>
 <p>另外他又批評，政府既然因應第五波疫情制訂措施，法例適用日期應只局限於法例生效起的3個月，但草案條文將欠租期追溯至今年1月1日， 與普通法無追溯力的傳統背道而馳。政府早前書面回覆他，若條例獲得通過，「只會在刊憲當天生效，並不會追溯至較早日子」，龍漢標批評政府：「呢個真係有啲語言偽術喇。」</p>
 <p><strong>政府：無法例禁止追溯</strong></p>
-<p>財政司司長私人辦公室顧問卓永興否認「語言偽術」，稱現時草案與追溯力之間「有一個微妙分別」，他解釋如果溯期至今年1月1月，即是法例禁止的行為在今年1月1日時已經不准做。但現時草案只針對追租期由今年1月1月開始計算。卓永興續指：「就算退一萬步講，有人認為有追溯效力，事實上香港法律無禁止法例有追溯力嘅。」他補充第五波疫情始於今年1月，暫緩追租期若定於法律生效後，部分中小企或因被追討年初的租金而倒閉。</p>
+<p>財政司司長私人辦公室顧問卓永興否認「語言偽術」，稱現時草案與追溯力之間「有一個微妙分別」，他解釋如果法律追溯期至今年1月1月，即是法例禁止的行為在今年1月1日時已經不准做。但現時草案只針對追租期由今年1月1月開始計算。卓永興續指：「就算退一萬步講，有人認為有追溯效力，事實上香港法律無禁止法例有追溯力嘅。」他補充第五波疫情始於今年1月，暫緩追租期若定於法律生效後，部分中小企或因被追討年初的租金而倒閉。</p>
 <p><strong>容海恩稱租霸濫用 張宇人挑機：你畀啲租霸嚟睇吓</strong></p>
 <p>新民黨容海恩擔心有「租霸」去年年尾租賃已完結，但繼續霸著地方，現在政府新法例又禁止業主追討欠租，她擔心出現濫用。卓永興指「租霸」無確實定義，一般是指「交咗兩三個月租，就已經開始唔交租，一路霸落去」，「咁如果你話幾個月無交租，係咪租霸呢就見仁見智喇」。他又指若有人去年已欠租，現時條例即使通過，業主亦可以追回去年欠租，甚至可以收回物業，因為法例只暫緩追討由今年開始的欠租。</p>
 <p>法案委員會主席、飲食界張宇人對容海恩提問似乎不滿，插話：「我啲業界呢成日呢⋯⋯業主去恰多過（租客）係租霸，你畀啲（租霸）嚟我睇吓，我都想睇吓邊個惡得咁交關，通常業主都係停水停電嘅啫。」容海恩帶笑回答：「好吖我介紹畀你。」張宇人閘停對方，指：「不過我唔想同你辯論，下一位議員。」</p>
