Update VOCUS 2022-04-02 patch

--- a/_posts/2022-04-01-VOCUS-懶人包-接單-下單-插單-轉單-棄單-各種訂單狀態的英日文怎麼說.html
+++ b/_posts/2022-04-01-VOCUS-懶人包-接單-下單-插單-轉單-棄單-各種訂單狀態的英日文怎麼說.html
@@ -8,37 +8,124 @@ tags: blog
 author: 你的英日語自學導師　 ོꦿ༄譯꧁難忘꧂
 ---
 
-<div class="draft-block draft--p left"></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:5900px" class="image-block-prerender" data-src="https://images.unsplash.com/photo-1520333789090-1afc82db536a?crop=entropy&cs=srgb&fm=jpg&ixid=MnwyNTY4N3wwfDF8c2VhcmNofDZ8fGFuc3dlciUyMHBob25lfGVufDB8fHx8MTY0NzYyNjI2MQ&ixlib=rb-1.2.1&q=85" data-width="5900" data-height="3933" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.unsplash.com/photo-1520333789090-1afc82db536a"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">你知道外商或外貿工作讓人頭疼的是那些有的沒的訂單專門術語，尤其近年歐盟對中國特定產品下重手課高額關稅，很多廠商像驚弓之鳥把訂單轉到別國，你會怎麼跟外國人解釋轉單呢？與外商主管們吃飯聊天聊到被客戶棄單的經歷，你要怎麼表達？訂單術語收集好一次讓你查個飽。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">在進入正題之前，你要先知道訂單英文叫做order(訂單、命令)或purchase(採購) order，日文是「注文（ちゅうもん）」，也可把注文替換成外來語的「オーダー（order）」。</div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<h2 class="draft-block draft--h2" name="header-4vodk">接單：</h2>
-<h2 class="draft-block draft--h2" name="header-46ocb"><a href="https://vocus.cc/article/61c49514fd89780001fb6033" target="_blank" class="draft--a">take orders</a> / accept orders </h2>
-<h2 class="draft-block draft--h2" name="header-fbmks">[teɪk ˈɔrdərz / ækˈsɛpt ˈɔrdərz]</h2>
-<h2 class="draft-block draft--h2" name="header-fncp4">受注（じゅちゅう）</h2>
+<h2 class="draft-block draft--h2">接單：</h2>
+<h2 class="draft-block draft--h2"><a href="https://vocus.cc/article/61c49514fd89780001fb6033" target="_blank" class="draft--a">take orders</a> / accept orders </h2>
+<h2 class="draft-block draft--h2">[teɪk ˈɔrdərz / ækˈsɛpt ˈɔrdərz]</h2>
+<h2 class="draft-block draft--h2">受注（じゅちゅう）</h2>
 <div class="draft-block draft--p left">接單的「接」可以解釋成「收取、收受」(= take)，或是「接受、接納」(= accept)，所以在英文有這兩種動詞可選用喔。</div>
 <blockquote class="draft-block draft--blockquote">Apologies(抱歉) to our(我們的) clients(客戶). We are not able to take (accept) orders during(在...期間) the war(戰爭).</blockquote>
 <blockquote class="draft-block draft--blockquote">對我們的客戶致上歉意，我們無法在戰爭期間接單。</blockquote>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">「受注」就是受理訂單。</div>
 <blockquote class="draft-block draft--blockquote">夜（よる）9（く）時（じ）以降（いこう）の受注（じゅちゅう）は承（うけたまわ）りません。</blockquote>
 <blockquote class="draft-block draft--blockquote">我們晚上九點過後不接單。</blockquote>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<h2 class="draft-block draft--h2" name="header-5ts9r">下單：</h2>
-<h2 class="draft-block draft--h2" name="header-9vans">place orders  [pleɪs ˈɔrdərz]</h2>
-<h2 class="draft-block draft--h2" name="header-4j83">発注（はっちゅう）</h2>
+<h2 class="draft-block draft--h2">下單：</h2>
+<h2 class="draft-block draft--h2">place orders  [pleɪs ˈɔrdərz]</h2>
+<h2 class="draft-block draft--h2">発注（はっちゅう）</h2>
 <div class="draft-block draft--p left">動詞place原本是「置放」，引申成「下訂」的概念，你可以想像自己把一張訂單填好放在(place)供應商桌上，說：「我要訂這些貨！」。</div>
 <blockquote class="draft-block draft--blockquote">Interested(有興趣的、有意的) customers(顧客) must(必須) place your orders before(在...之前) December(12月) 31st.</blockquote>
 <blockquote class="draft-block draft--blockquote">有意購買的顧客必須在12月31日前下單。</blockquote>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">「発注」就是發出訂單，對供應商發出訂單，就是下單的動作。</div>
 <blockquote class="draft-block draft--blockquote">発注（はっちゅう）は12月31日までにお願（ねが）い致（いた）します。</blockquote>
 <blockquote class="draft-block draft--blockquote">請在12月31日前下單。</blockquote>
+<h2 class="draft-block draft--h2">詢單：</h2>
+<h2 class="draft-block draft--h2">inquire / make an inquiry</h2>
+<h2 class="draft-block draft--h2">[ɪnˈkwaɪr / meɪk ən ɪnˈkwaɪri]</h2>
+<h2 class="draft-block draft--h2">引（ひ）き合（あ）い</h2>
+<h3 class="draft-block draft--h3"></h3>
+<h2 class="draft-block draft--h2">報價：</h2>
+<h2 class="draft-block draft--h2">quote / quotation  [kwoʊt / kwoʊˈteɪʃən]</h2>
+<h2 class="draft-block draft--h2">見積（みつ）もり/見積（みつ）もりを依頼（いらい）する</h2>
+<div class="draft-block draft--p left">動詞inquire是詢問，是比動詞ask(提問)還要更正式又正經的講法，它的名詞形是inquiry，make an inquiry是做出詢單的動作。</div>
+<div class="draft-block draft--p left">動詞quote是報價，名詞形是quotation，提供報價是講provide a quotation。</div>
+<div class="draft-block draft--p left">有關inquire和quote的詳細用法，<a href="https://english.cool/quotation/" target="_blank" class="draft--a">英文庫網站已做很完整的說明</a>，我就不多贅述了。</div>
+<div class="draft-block draft--p left">名詞「引き合い」原本有兩人拉著繩子互相拉來拉去之意，在商場上就用來形容彼此試探價碼底線的意味，所以有了詢價或詢單之意。</div>
+<blockquote class="draft-block draft--blockquote">お引（ひ）き合（あ）いありがとうございます。</blockquote>
+<blockquote class="draft-block draft--blockquote">感謝您來詢單。</blockquote>
+<blockquote class="draft-block draft--blockquote">この製品（せいひん）に関（かん）してはお客様（きゃくさま）の引（ひ）き合（あ）いが多い。</blockquote>
+<blockquote class="draft-block draft--blockquote">這項產品的詢單很多。</blockquote>
 <div class="draft-block draft--p left"></div>
+<div class="draft-block draft--p left">名詞「見積もり」是報價，製作報價單是「見積もり書（しょ）を作成（さくせい）する」，委託報價則是「見積もりを依頼（いらい）する」。</div>
+<blockquote class="draft-block draft--blockquote">必要項目（ひつようこうもく）をご入力（にゅうりょく）のうえ、見積（みつ）もりボタンを押（お）してください。</blockquote>
+<blockquote class="draft-block draft--blockquote">請在輸入必要項目後按下報價鈕。</blockquote>
+<blockquote class="draft-block draft--blockquote">前回（ぜんかい）お話（はな）しした製品（せいひん）の見積（みつ）もりを依頼（いらい）してもいいでしょうか。</blockquote>
+<blockquote class="draft-block draft--blockquote">上次跟您談過的產品，可以請您做個報價嗎？</blockquote>
+<h2 class="draft-block draft--h2">急單：</h2>
+<h2 class="draft-block draft--h2">rush order  [rʌʃ ˈɔrdər] </h2>
+<h2 class="draft-block draft--h2">お急（いそ）ぎの注文（ちゅうもん）</h2>
+<div class="draft-block draft--p left">很久以前我曾寫過<a href="https://vocus.cc/article/5eeddacefd897800011dbb8e" target="_blank" class="draft--a">「急單」的英日文應該這樣說才對</a>，內文已有詳盡的解釋可供參考。其實今天寫這篇就是為了再作擴大補充來著的。</div>
+<h2 class="draft-block draft--h2">插單：</h2>
+<h2 class="draft-block draft--h2">insert rush orders  [ɪnˈsɜrt rʌʃ ˈɔrdərz]</h2>
+<h2 class="draft-block draft--h2">割（わ）り込（こ）み注文<span style="font-weight: bold; ">（ちゅうもん）</span></h2>
+<div class="draft-block draft--p left">會講英文的急單，你就會講插單了，只要在rush order前面加上動詞insert(插入)即可，insert rush orders就是插入急單，是一種插隊的急單。</div>
+<blockquote class="draft-block draft--blockquote">It is urgent(急迫的) and you must(必須) insert this rush order for us.</blockquote>
+<blockquote class="draft-block draft--blockquote">這很急，你一定要幫我們插這張單。</blockquote>
 <div class="draft-block draft--p left"></div>
-<h2 class="draft-block draft--h2" name="header-en8j">詢單：</h2>
-<h2 class="draft-block draft--h2" name="header-8nels"></h2>
+<div class="draft-block draft--p left">既然都是插隊的訂單了，日文的表達方式就會用到「割り込み」(插隊)這個名詞，「割り込み注文」就是插進來的訂單。</div>
+<blockquote class="draft-block draft--blockquote">無理（むり）な納期（のうき）の注文（ちゅうもん）は断（ことわ）る。割（わ）り込（こ）み注文（ちゅうもん）は絶対（ぜったい）に受（う）けない。</blockquote>
+<blockquote class="draft-block draft--blockquote">我們拒絕交期不合理的訂單。絕不接受插單。</blockquote>
+<h2 class="draft-block draft--h2">轉單：</h2>
+<h2 class="draft-block draft--h2">redirect orders  [ˌridəˈrɛkt ˈɔrdərz]</h2>
+<h2 class="draft-block draft--h2">転注（てんちゅう）</h2>
+<div class="draft-block draft--p left">轉單就是把下訂單的對象從一方改成另一方，代表轉換了供應商。</div>
+<div class="draft-block draft--p left">動詞redirect的意思是重新(re)做引導(direct)，所以轉單就是重新引導(redirect)訂單(orders)到(to)另一家廠商的手上。</div>
+<blockquote class="draft-block draft--blockquote">As(隨著) the world(世界) is ramping(斜坡) up sanction(制裁) on Russia(俄國), we are forced(被迫) to redirect our(我們的) orders to other(其他) countries(國家).</blockquote>
+<blockquote class="draft-block draft--blockquote">隨著世界加速對俄國制裁，我們被迫轉單到其他國家。</blockquote>
+<div class="draft-block draft--p left">名詞「転注」是轉換、轉手訂單。</div>
+<blockquote class="draft-block draft--blockquote">ロシアへの制裁（せいさい）が高（たか）まる今（いま）、転注（てんちゅう）も視野（しや）に入（い）れている。</blockquote>
+<blockquote class="draft-block draft--blockquote">眼下國際對俄國的制裁加碼，我們考慮可能會轉單。</blockquote>
+<h2 class="draft-block draft--h2">續單、再下單：</h2>
+<h2 class="draft-block draft--h2">re-purchase/repeat orders</h2>
+<h2 class="draft-block draft--h2">[reɪ-ˈpɜrʧəs/rɪˈpit ˈɔrdərz]</h2>
+<h2 class="draft-block draft--h2">再注（さいちゅう）</h2>
+<div class="draft-block draft--p left">動詞purchase是採購，所以re(重新、再度)-purchase就是再繼續下單。repeat(重複) orders則是重複下的訂單，也就是續單。</div>
+<blockquote class="draft-block draft--blockquote">You can re-purchase the same(同樣的) product(產品) through(透過) this link(連結).</blockquote>
+<blockquote class="draft-block draft--blockquote">您可透過此連結續購同樣的產品。</blockquote>
+<blockquote class="draft-block draft--blockquote">It's hard(困難的) to keep(保持) our business(事業) running(營運) in the pandemic(全球疫情) so we are glad(高興的) to see repeat orders coming in.</blockquote>
+<blockquote class="draft-block draft--blockquote">在全球疫情下我們要維持事業運作很不容易，所以我們很高興看到有續訂的訂單進來。</blockquote>
+<div class="draft-block draft--p left">名詞「再注」是再度下訂單。</div>
+<blockquote class="draft-block draft--blockquote">再注（さいちゅう）のお客様（きゃくさま）はこちらのリンクにてお願（ねが）い致（いた）します。</blockquote>
+<blockquote class="draft-block draft--blockquote">要續單的客人請在此連結操作。</blockquote>
+<h2 class="draft-block draft--h2">長單、長期訂單：</h2>
+<h2 class="draft-block draft--h2">standing orders  [ˈstændɪŋ ˈɔrdərz]</h2>
+<h2 class="draft-block draft--h2">長期（ちょうき）の注文<span style="font-weight: bold; ">（ちゅうもん）</span></h2>
+<div class="draft-block draft--p left">動詞stand是站立，standing在這裡則有一直長久矗立之意，就好像神山一樣矗立一萬年長長久久，standing orders是長久的訂單。</div>
+<blockquote class="draft-block draft--blockquote">To become(成為) a standing order customer(顧客), you must order our cakes(蛋糕) using(使用) the app, purchase(購買) cakes in our tasting(品嚐) room(室), or call(致電) us to make a purchase.</blockquote>
+<blockquote class="draft-block draft--blockquote">要成為長期下單的顧客，您必須用app訂購我們的蛋糕，或在我們的試吃室購買蛋糕，或致電購買蛋糕。</blockquote>
+<div class="draft-block draft--p left">至於日文光是看漢字就太好猜出意思了。</div>
+<blockquote class="draft-block draft--blockquote">長期（ちょうき）の注文（ちゅうもん）は優先（ゆうせん）に受（う）け取（と）ります。</blockquote>
+<blockquote class="draft-block draft--blockquote">我們會優先收長單。</blockquote>
+<h2 class="draft-block draft--h2">指定期間的訂單：</h2>
+<h2 class="draft-block draft--h2">time limit orders  [taɪm ˈlɪmət ˈɔrdərz]</h2>
+<h2 class="draft-block draft--h2">期間（きかん）指定（してい）注文<span style="font-weight: bold; ">（ちゅうもん）</span></h2>
+<div class="draft-block draft--p left">這種訂單是指在某一段指定時間內持續下單的訂單。</div>
+<div class="draft-block draft--p left">名詞time limit是時間限制，有時間限制的單就是期間限定的訂單。</div>
+<blockquote class="draft-block draft--blockquote">Specify(指明) the duration(時長) of your purchase(採購) for your time limit order.</blockquote>
+<blockquote class="draft-block draft--blockquote">請為您的指定期間訂單明訂採購的時間長度。</blockquote>
+<div class="draft-block draft--p left">同樣的，日文也是看漢字就能懂其意了。</div>
+<blockquote class="draft-block draft--blockquote">臨時（りんじ）メンテナンスのため、システムで期間（きかん）指定（してい）注文（ちゅうもん）を30営業日（えいぎょうび）まで指定（してい）することができない場合（ばあい）がございます。</blockquote>
+<blockquote class="draft-block draft--blockquote">有可能因為臨時維修，而無法透過系統指定長達30個營業日的指定期間訂單。</blockquote>
+<h2 class="draft-block draft--h2">取消訂單：</h2>
+<h2 class="draft-block draft--h2">cancel orders  [ˈkænsəl ˈɔrdərz]</h2>
+<h2 class="draft-block draft--h2">注文（ちゅうもん）を取（と）り消（け）す</h2>
+<div class="draft-block draft--p left">動詞cancel是取消，後面直接銜接訂單(orders)就好。</div>
+<blockquote class="draft-block draft--blockquote">Those(那些人) who cancel more than 3 orders will restricted(被限制) from access(進入) to the purchase(採購) platform(平台) for 1 hour(小時).</blockquote>
+<blockquote class="draft-block draft--blockquote">取消超過三張訂單的人將被限制一小時無法進入採購平台。</blockquote>
+<div class="draft-block draft--p left">日文的講法則是把(を)訂單(注文)取消掉(取り消す)。</div>
+<blockquote class="draft-block draft--blockquote">注文（ちゅうもん）を取（と）り消（け）すお客様（きゃくさま）は次（つぎ）のページへお越（こ）しください。</blockquote>
+<blockquote class="draft-block draft--blockquote">要取消訂單的顧客請前往下一頁。</blockquote>
+<h2 class="draft-block draft--h2">棄單：</h2>
+<h2 class="draft-block draft--h2">abandon orders  [əˈbændən ˈɔrdərz]</h2>
+<h2 class="draft-block draft--h2">注文<span style="font-weight: bold; ">（ちゅうもん）</span>を無断（むだん）取（と）り消（け）す</h2>
+<div class="draft-block draft--p left">取消訂單是在最終期限前按下取消鈕，通知供貨方取消訂單。棄單則比較惡質，通常是等到供貨商都已經出貨了還不繳款，等同恣意放棄訂單，貨都出了才知道被棄單。但也有人認為最後一刻突然通知取消訂單而造成來不及停止生產的狀況也屬於棄單。</div>
+<div class="draft-block draft--p left">動詞abandon是放棄、棄之不理，同樣在後面直接銜接訂單(orders)就好。</div>
+<blockquote class="draft-block draft--blockquote">Customers(顧客) who abandon orders on us will be forbidden(被禁止) from our service(服務) for good.</blockquote>
+<blockquote class="draft-block draft--blockquote">對我們棄單的顧客將被永遠禁止使用我們的服務。</blockquote>
+<div class="draft-block draft--p left">日文的講法是恣意地(無断)取消訂單(注文を取り消す)。</div>
+<blockquote class="draft-block draft--blockquote">注文（ちゅうもん）を無断（むだん）取（と）り消（け）すような行為を固（かた）く禁（きん）ずる。</blockquote>
+<blockquote class="draft-block draft--blockquote">嚴禁棄單的行為。</blockquote>
+<h2 class="draft-block draft--h2">給你自己鼓鼓掌</h2>
+<div class="draft-block draft--p left">學會這麼多外文術語辛苦啦。看完了這篇被你賺到，這是我好幾年在工作中收集整理來的懶人包，不是短短半個小時就能一次查出來的東西，看完這一帖，你不用太擔心跟客戶談訂單會想不到確切的術語用詞了！</div>
+<div class="draft-block draft--p left">編寫外語教學文章耗時費力，如果你喜歡我的文章，請幫忙分享給其他你知道想學外文的人們。或是追蹤、按讚，表達你的支持。更多生活好用的英日文在我這裡等你來發掘！</div>
