--- a/_posts/2022-04-01-VOCUS-關於桃園史前遺址的二三事.html
+++ b/_posts/2022-04-01-VOCUS-關於桃園史前遺址的二三事.html
@@ -8,4 +8,72 @@ tags: blog
 author: 雀榕
 ---
 
-<p><br></p>
+<h3>前言：</h3>
+<p>現在大家嘴巴所說的「桃園市」，是在2010年五都升格以後才出現，之前叫做「桃園縣」。升格前的「桃園市」則是現今的「桃園區」。升格前後，「桃園」的面積沒有什麼改變，看起來相當穩定，幾十年來沒有重大變化。我想，使用這個比較穩定的框架來談桃園地區的史前遺址，讀者的接受度會比較高，也比較容易理解。</p>
+<p>如果用地理區作框框，桃園境內有高山、丘陵、河階、台地、平原……多種地形，可以分作好幾個區域，寫成好幾篇文章，不過這樣做，已經超越我的負荷能力，需要勞煩某位超級了解桃園史前遺址的考古學家、歷史教授或民族學者來寫。為了讓內容不要太過無趣，嚇走讀者，以下我將用Q&A的方式呈現，如果這篇文章能讓您快速得到相關資訊，甚至得到一些趣味，想進一步了解桃園的史前遺址，真是再好不過！</p>
+<img src="https://images.vocus.cc/14f2d964-6e41-4b50-8768-4a08b57bb505.jpg">
+<figcaption class="imageCaption" style="cursor: text; display: inline-block; margin-top: 15px;">從大園尖山遺址發掘的石器。</figcaption>
+<p><b>Q：桃園市幾萬年前有人住嗎？</b></p>
+<p>A：我相信多數的發問者，尤其是住在桃園的人，很想聽到這樣的答案：「有的！」甚至巴不得是全台灣最早的！呵~~只能說，有待考古學者繼續努力！因為現今的桃園境內，還沒有發現屬於舊石器時代的文化遺址，所以沒有辦法肯定斷言：幾萬人前就有人住在桃園。</p>
+<p>但是，沒有發現舊石器時代的文化遺址，我們也不能反過來馬上下結論說：「桃園幾萬年前一定是無人地帶。」現在還沒有發現，不代表地底下沒有，而且遠古時代人類常為了追逐獸群，或尋覓更好的居住地而遷徙，天知道幾萬年前在台東留下長濱文化遺址的那批先民，是否曾路過桃園，或在桃園台地住了幾年？</p>
+<p><b>Q：那幾千年前有人住嗎？有找到什麼遺址証明？</b></p>
+<p>A：有的！</p>
+<p>日治時代至今，已經發現一些屬於新石器時代的文化遺址。有別於舊石器時代，新石器時代的人除了用敲打、剝離石片的方式製作石器，還懂的用磨製的方法，而且隨著時間推移，人類逐漸發展出製作陶器、玉器，以及摸索出馴養動物與栽植作物的技術。</p>
+<p>目前為止，桃園境內出土的史前遺址都屬於新石器時代，如果我沒記錯，年代最早應該是位在大園國小的尖山文化遺址，距今二千八百多年。除了這個遺址，人們也在觀音、新屋、龜山、復興、桃園等地，發現其他的遺址，以下我簡短介紹這些遺址：</p>
+<blockquote>大園尖山：在大園國小內，那裡是一座非常平緩的小山丘，只有海拔37公尺而已。1945年由當時的校長徐張流水先生無意中發現，之後有國分直一、宋文薰、劉益昌、黃士強等學者投入調查研究，是桃園極少數得到充分發掘與研究的遺址。</blockquote>
+<blockquote>觀音草漯：在觀音區樹林村復興宮附近，也稱為「青山遺址」。日治時期日本人庄司久孝發現以後，不但親自挖掘出一些粗糙的打製石器，而且為這個遺址留下記錄。戰後，國分直一、陳奇祿、宋文薰等人前往調查，又找到一些土器與石器。</blockquote>
+<blockquote>觀音塔腳：位在觀音區塔腳村。雖然學者確定此處有遺址，卻還沒有大規模發掘。</blockquote>
+<blockquote>榕樹下：在新屋區笨港里，2009年，施工單位在興建西濱公路新屋路段時發現，經過學者與考古團隊的搶救、發掘，出土不少石刀、石斧、陶器碎片等物品，目前學者正在研究。</blockquote>
+<blockquote>過溪：在龜山區龜山村台一線的長壽路段，位於平緩的山坡，離虎頭山公園不遠。1963年台北縣文獻委員會盛清沂發現這個遺址，找到了一些黃褐色的細砂陶片，打製與磨製而成的石鋤、石槌等工具。已經有人研究。</blockquote>
+<blockquote>高義：在大漢溪上游河谷，復興區高義教會附近，是桃園極少數位在山區的史前遺址，發掘出石製的網墜、紡輪、石錛、砥石、凹石、石斧、石鋤等器物，以及陶片。目前也有人在研究。</blockquote>
+<blockquote>虎頭山公園：在桃園區虎頭山公園內的兒童樂園，2014年因施工被人發現，之後考古團隊在那裡發掘，挖出大量的陶片，以及一只用蛇紋岩做成的玉環殘段。發掘工作在2020年告一段落，目前已進入研究階段。</blockquote>
+<p>以上是比較大型的遺址，還有一些小型與尚未開挖的遺址，等待考古團隊發掘與研究。</p>
+<p><b>Q：那些遺址有金屬做的東西嗎？有玉器呢？</b></p>
+<p>A：目前還沒有找到金屬做的物品，也沒有發現金屬作坊的相關遺跡，包括鐵渣與煉鐵需要的鐵砂、木炭。玉器的話，虎頭山公園、尖山遺址都有埋藏玉環殘段，不過已經裂成一段一段，並不完整。台灣北部沒有出產玉石，只有花、東才有，所以挖到玉環殘段後，學者滿開心的！因為代表這兩個遺址的人曾與外界交易，取得製作玉環的材料，或是成品。</p>
+<p><b>Q：千百年前的桃園人會做生意嗎？</b></p>
+<p>A：如果您的「做生意」是指攜帶物品到遠方做買賣，這需要更多遺物証實，目前可以確定的是，千百年前的桃園人並不是活在一個非常孤立封閉的環境，他們會跟其他村社的人做生意。儘管有業餘學者宣稱他們會使用貝幣交易，但學界至今沒有証實！古人最有可能是用「以物易物」的方式，取得他們想要的物品。</p>
+<p>這個有兩個証據：第一，距今2800年的尖山遺址，一些石器的材質是安山岩，可是桃園並不出產安山岩，最近的產地是在遙遠的陽明山周邊地區。第二，尖山、虎頭山遺址裡都有玉環殘片，都是用花、東的玉石做的，一個是閃玉，一個是蛇紋岩，桃園都沒有這兩樣，如果不是透過貿易，是用什麼方式得到呢？</p>
+<img src="https://images.vocus.cc/38aee9a3-da1a-4882-95ca-842ed9433a3a.jpg">
+<figcaption class="imageCaption" style="cursor: text; display: inline-block; margin-top: 15px;">大園尖山遺址的遺物：陶器碎片</figcaption>
+<p><b>Q：古代的桃園人會獵頭嗎？</b></p>
+<p>A：學者還沒有找到他們獵頭的證據，不過不排除這個可能。</p>
+<p><b>Q：桃園古代的部落會互相攻打嗎？有沒有其他部落的人打進來，例如：留下十三行文化遺址的那批人，曾來桃園殖民嗎？</b></p>
+<p>A：雖然還沒有找到疑似戰場的遺跡，也沒有從這些遺址找到成排的無頭屍體，以及疑似是人骨製成的東西，例如：用頭蓋骨製成的杯碗、用大腿骨做出來的棒錘、用一堆指骨做成的項練，不過不排除這個可能，因為利用人骨製作器皿、用活人當祭品、食人肉、用人頭來誇示自己的武勇……諸如此類的壞事，千百年前大部份的人類都做過，不分野蠻、文明。不論是舊約聖經、中國的一些古老傳說，還是坊間的歷史書、學院的論文……都可以找到成堆上述的負面事跡。至於村社之間為了爭奪土地、水源、糧食……互相攻打，應該是有的。</p>
+<p>至於十三行文化遺址的那批人來桃園殖民……非常有可能！因為他們會煉鐵，又能從海外的人取得青銅刀，不會拿這些青銅刀、鐵刀去攻打那些住在林口台地、龜山丘、桃園台地，以及淡水河流域的部落嗎？</p>
+<p>如果這群人從十三行遺址所在的八里(新北市八里區)出發，不論是翻越林口台地、龜山丘陵，還是從狹窄的海岸地帶進入桃園，一點都不困難！不過，目前還無法証明他們或他們的後代子孫移居桃園，也難以証明古桃園人曾跟他們打的血流成河，更無法証明他們曾經統治桃園的部落。</p>
+<p>總之，相關的文物與古戰場遺址，目前還沒有找到。</p>
+<p><b>Q：考古團隊有挖到那些遺址的人骨嗎？</b></p>
+<p>A：目前還沒有。這是一件相當可惜的事情！沒有找到人骨，就無法知道千百年前的古桃園人是怎麼下葬的，到底是直肢葬、屈肢葬？是包覆鹿皮，然後入土為安？還是整尊被安置在陶甕或土坑裡？沒人知道。</p>
+<p>對歷史學家、考古團隊，以及從事古人類研究的學者來說，「找到人骨」是一件讓他們雀躍不已的事！因為將能大顯身手，破解一個又一個的謎團，既滿足好奇心、發揮專業知識，又能創造學術成就。只是，對某一小撮現今的桃園人來說，未必是一件令他們高興的事，因為自家祖先的遺骨被挖出來了！即將要被送進在學術機構、博物館，供學者研究，他們將面臨「是否該領回遺骨另行安葬」的難題。在學界廣泛利用基因研究之前，這種情況很少見，除非學者去部落盜挖，或是祖先與外來殖民者抗爭不幸失敗，才會產生祖先遺骨被拿來研究、展覽的苦主，現在這樣的問題漸漸浮上台面，例如：近年花蓮馬遠村的布農族人就向台大醫學院抗爭，迎回幾十年前被學者盜挖來研究的先人遺骨。總之，未來可能會出現類似引人測目的事情。</p>
+<p><b>Q：這些遺址的先民是桃園平埔族、泰雅族的祖先嗎？</b></p>
+<p>A：相信不少人想知道真相，可惜目前為止，無論是考古學者、民俗學家、歷史教授都不敢拍著胸脯，大聲地說：「那當然！」，並以阿莎力的態度將南崁人、霄里人、龜崙人、泰雅人與那些遺址的先民「亂點鴛鴦譜」，因為存在著各種可能：</p>
+<p>也許某遺址的人就是○○社絕大多數人的父系祖先……</p>
+<p>可能這些遺址的先民，他們的子孫被從其他地方移入桃園的南崁人、霄里人、龜崙人、泰雅人驅離，甚至整個消滅……</p>
+<p>這些遺址的先民，他們的子孫或許幾千年後因疾病、戰爭、天災等原因，搬出桃園，移居其他地方……移出一段時間以後，才有其他族群進入。</p>
+<p>目前，考古學者從這些遺址找不到可供基因研究的人骨，無法萃取骨頭裡的DNA做更精細的研究，連帶無法與現今原住民的基因做比較，得出兩者的關係。其次，民族學與歷史學家無法從歷史文獻與平埔族(殘存的幾個家族)、泰雅族的口傳歷史，找到能與那些考古遺址對應的說法。</p>
+<p>總的來說，學界對這個問題，態度普遍小心謹慎，有幾分証據說幾分話，所以到目前為止，我們很少聽到他們像坊間一些論者那般高談闊論。──確實！這個重要的問題需要足夠的時間解答，馬上就下定論，極有可能出錯。</p>
+<p><b>Q：桃園史前時代的遺址對我們民眾有什麼意義呢？</b></p>
+<p>A：有沒有意義，因人而異，並沒有標準答案。對我與一部分人來講，我們會感到興奮！原來故鄉幾千年前就有人住了！不用怨嘆新北市有一座十三行博物館，桃園沒有！也不用難過全台其他地方都有史前文化遺址，桃園沒有！早在幾千年前就有一群人不約而同用腳投票，選擇住在桃園，而不是別的地方，至少証明桃園這塊土地不壞！先民眼中美好的土地，千百年後卻變成我們眼中非常普通的地方，甚至淪為一些人眼中很糟很沒有水準的城市，為什麼呢？是不是我們各方面的水準，如：賺錢能力、公德心、美感、歷史感、廢棄物處理……不夠呢？遺址的存在可讓我們反思一下。</p>
+<p><b>Q：桃園史前時代的遺址對台灣歷史、桃園鄉土研究有什麼意義？</b></p>
+<p>A：由於台灣跟世界許多地方一樣，大部份的歷史記錄不是鄰近國家的先民，就是由外來統治者的智識階層書寫，容易受到對方的偏見、謊言、思考盲點……影響，所以必須高度依賴台灣內部各族群的口傳歷史、古文物與遺址。</p>
+<p>由於現今桃園市涵蓋的區域，很晚才成為漢字通行之地，而且涉及到桃園的歷史記錄遠不及台南、新竹、台北……等地眾多，再加上原居於台地、平原的原住民在清代被同化殆盡，其口傳歷史已隨著母語、族群認同消亡，因此遺址顯得格外重要。當那些貌不驚人的遺址被學者出土，研究一番，寫成調查報告，台灣歷史、桃園鄉土研究者就多了不少的學術資源。</p>
+<p>光是以族群為主題，遺址本身與學者投入其中所做出來的研究報告，至少就能刷新我們的認知──原來桃園三、四千年前就有人居住，不是被西班牙人征服，或是清代一堆漢人前來開墾，桃園歷史這才拉開序幕──不是的！桃園的歷史可以上溯到那些遺址當中最早的那一個！</p>
+<p><b>Q：考古學者呢？對他們的意義是？</b></p>
+<p>A：我不是考古學者，也不是他們的研究生，實在不知道考古學、人類學、民俗學的人怎麼想，必須請他們現身說法。</p>
+<img src="https://images.vocus.cc/46a6966e-3bfc-45ac-8a8a-e9964e7f8748.jpg">
+<figcaption class="imageCaption" style="cursor: text; display: inline-block; margin-top: 15px;">大園尖山遺址的遺物：從石頭剝離出石片的工具。</figcaption>
+<p><b>Q：請發揮小說家的想像力，試想妳正在接受成大考古學研究所碩士班的面試，教授問妳：「桃園史前遺址有什麼好研究的？」然後告訴妳：「不說，妳就無法活著走出考場！」</b></p>
+<p>A：既然如此，我就不客氣了！我的回答是……</p>
+<p>大園尖山遺址距今2800年前，出土的陶片、灰坑、石器等遺物，可以幫助我們釐清一個謎團，就是：圓山文化與植物園文化的關係，究竟是一脈相承？互不相干？還是相關，卻非由圓山文化直接發展？因為尖山遺址都有上述兩種文化的遺物。</p>
+<p>草漯遺址、塔腳遺址距今1500~2000年前，還是更早，目前還沒定論。這兩個遺址與大園尖山遺址雖有一段距離，都位在桃園沿海地區，到底屬於新石器時代晚期的哪個文化？兩者與大園尖山遺址的關係──都需要進一步探索。</p>
+<p>虎頭山公園遺址，距今1800年前，屬於新石器時代晚期的植物園文化，與臨近不遠的龜山過溪遺址不一樣，後者是新石器時代晚期圓山文化。為何相距不遠的兩個遺址，文化內涵卻不太一樣，需要我們解開這個謎團。</p>
+<p>高義遺址所在位置特殊，不在平地，而在山區，究竟與新北、新竹、宜蘭、桃園其他的山區遺址是什麼樣的關係？與桃園台地、沿海地區的遺址，又有什麼關係？以上是我進入貴所後想要釐清的問題。</p>
+<p>以上是這場模擬面試的回答，應該不會氣壞那些教授吧？如果我講錯，請大家多包涵，可在這篇文章的留言區指正，感謝~~</p>
+<p> (全文終)</p>
+<h3>參考資料：</h3>
+<p>1.劉益昌，《台灣原住民史：史前篇》，國史館台灣文獻館，2002年版。</p>
+<p>2.張素玢、詹素娟，《台灣原住民史：北部平埔族史篇》，國史館台灣文獻館，2001年版。</p>
+<p>3.<a href="https://culture.tycg.gov.tw/home.jsp?id=146&parentpath=0,130,133&mcustomize=onemessages_view.jsp&dataserno=201607110039&aplistdn=ou=data,ou=chculture3,ou=chculture,ou=ap_root,o=tycg,c=tw&toolsflag=Y">桃園市政府文化局-大園尖山遺址</a>、<a href="https://tyarch.tycg.gov.tw/zh-TW/article/banyan_index/2">桃園市政府文化局-榕樹下遺址</a>、<a href="https://tyarch.tycg.gov.tw/zh-TW/article/co_20210909_095756/3">桃園市政府文化局-虎頭山公園遺址</a></p>
+<p>4.<a href="https://nchdb.boch.gov.tw/assets/overview/archaeologicalSite/20080321000003">國家文化資產網-大園尖山遺址</a></p>
+<p>5.不具名的社區協會或○○文化協會者撰寫的簡短介紹：<a href="http://library.taiwanschoolnet.org/cyberfair2002/C0215330294/a25.htm">草漯遺址</a>、<a href="https://cloud.culture.tw/frontsite/inquiry/emapInquiryAction.do?method=showEmapDetail&indexId=32954">觀音鄉塔腳社區發展協會(當中有「塔腳遺址」)</a></p>
+<p>6.<a href="https://www.easyatm.com.tw/wiki/%E9%BE%9C%E5%B1%B1%E9%81%8E%E6%BA%AA%E9%81%BA%E5%9D%80">百科知識-龜山過溪遺址</a>、民報轉載《桃園誌》第63號的文章，轉載後，名為「<a href="https://www.peoplemedia.tw/news/1d5a94f5-1b91-4575-bc68-4b30296768ed">史前遺址 城市裡考古</a>」</p>
