--- a/_posts/2022-04-01-PQ-美跨黨派眾議員挺台灣-盼將台納入印太經濟架構.html
+++ b/_posts/2022-04-01-PQ-美跨黨派眾議員挺台灣-盼將台納入印太經濟架構.html
@@ -28,19 +28,27 @@ author: Salima
 
 
 
-<h3>美國競爭法通過　將強化美台關係</h3>
+<h3>美國競爭法參院版通過　強化美台關係　不涉及正名</h3>
 
 
 
-<p>美國參議院於 3 月 28 日批准《美國競爭法》，提及強化台美合作，和在多個面向應對中國的競爭與合作。對此，中國外交部發言人汪文斌 29 日回應，相關法案涉華內容罔顧事實，渲染「中國威脅論」，鼓吹展開對華戰略競爭，充斥著冷戰零和思維。汪文斌說，此舉與中美兩國各界希望加強交流合作的普遍願望背道而馳。中方對此堅決反對，將堅定捍衛自身利益。</p>
+<p>除了美國眾議員呼籲將台灣納入「印太經濟架構」，值得注意的是，美國參議院於 3 月 28 日批准《美國競爭法》，提及強化台美合作，和在多個面向應對中國的競爭與合作。這個「美國競爭法」也被友台參議員魯比歐&nbsp; （ Marco&nbsp;Rubio ）稱之為「所謂的中國法案」，代表這個法案充滿了和中國較勁的意味。 魯比歐提出禁止中國奴工產品進口，則遭到美國公司的反對。</p>
 
 
 
-<p class="pqpoint">根據法案內容，在強化美台夥伴關係中，美國政策為承認台灣是美國印太戰略的重要一環，強調基於台灣關係法和六項保證的對台承諾。（1）支持台灣落實不對稱防衛戰略（2）敦促台灣增加國防開支（3）定期對台軍售（4）推動台灣有意義地參與國際組織（5）強化雙邊貿易，追求自由貿易協定（FTA）（6）擴大雙邊經濟與科技交流，包含優化供應鏈。</p>
+<p>對此，中國外交部發言人汪文斌 29 日回應，相關法案涉華內容罔顧事實，渲染「中國威脅論」，鼓吹展開對華戰略競爭，充斥著冷戰零和思維。汪文斌說，此舉與中美兩國各界希望加強交流合作的普遍願望背道而馳。中方對此堅決反對，將堅定捍衛自身利益。</p>
 
 
 
-<p>此外，法案呼籲美國國務卿考慮成立美台文化交流基金會，要求國務院和政府機構，停止以過時的「台灣當局」（Taiwan authories）來稱呼台灣民選政府，不應對國務院等各部門官員與台灣官員例行往來施加任何限制。同時，法案更要求國務卿在法案生效 90 天內廢除有關美台往來的內部限制，不得限制台灣軍人和美處官員在執行公務時，展示台灣國旗或軍徽等，官方往來得穿著制服，也能在國務院的社群媒體上宣傳與台灣的往來。</p>
+<p class="pqpoint">《美國競爭法》參院版本內容，承認台灣是美國印太戰略的重要一環，基於台灣關係法和六項保證的對台承諾，提出強化美台夥伴關係的措施：（1）支持台灣落實不對稱防衛戰略（2）敦促台灣增加國防開支（3）定期對台軍售（4）推動台灣有意義地參與國際組織（5）強化雙邊貿易，追求自由貿易協定（FTA）（6）擴大雙邊經濟與科技交流，包含優化供應鏈。</p>
+
+
+
+<p>此外，法案呼籲美國國務卿考慮成立「美台文化交流基金會」，要求國務院和政府機構，停止以過時的「台灣當局」（Taiwan authories）來稱呼台灣民選政府，不應對國務院等各部門官員與台灣官員例行往來施加任何限制。同時，法案更要求國務卿在法案生效 90 天內廢除有關美台往來的內部限制，不得限制台灣軍人和美處官員在執行公務時，中華民國 （ 台灣 ） 「Republic of China （ Taiwan ）」 國旗或軍徽等，官方往來得穿著制服，也能在國務院的社群媒體上宣傳與台灣的往來。</p>
+
+
+
+<p>不同於眾議院版本所呼籲將「台北經濟文化代表處」（Taipei Economic and Cultural Representative Office, TECRO）改名為「台灣代表處」 （ Taiwan Representative Office ） ，參議院並未納入類似「正名」條文。程序上，參、眾議院兩個版本，將協調出一個版本後，各自重新表決通過後，才交由總統簽署。</p>
 
 
 
